// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField > renders help text correctly 1`] = `
<label
  class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
  for=":r4:"
>
  Username
</label>
`;

exports[`InputField > renders input correctly 1`] = `
<label
  class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
  for=":r2:"
>
  Username
</label>
`;

exports[`InputField > renders label correctly 1`] = `
<label
  class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
  for=":r0:"
>
  Username
</label>
`;

exports[`InputField > updates input value correctly 1`] = `
<label
  class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
  for=":r6:"
>
  Username
</label>
`;
